# codex-token-metrics-live

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
assets/: codex-token-metrics.html
scripts/: package-release.sh
src/: main.rs
