[package]
name = "codex-token-metrics-live"
version = "0.1.1"
edition = "2021"
description = "Native local dashboard for Codex token usage and estimated cost metrics"
license = "MIT"
repository = "https://github.com/fxrdhan/codex-token-metrics-live"
keywords = ["codex", "metrics", "tokens", "dashboard"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
chrono = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
